--- a/index.html
+++ b/index.html
@@ -9,27 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Hola Mundo!</h1>
-    <h4 class="subtitulo">Como estan Geeks?</h4>
-    <div class="contenedor">
-        <div class="side">
-            2
-        </div>
-        <div class="right">
-            <button>Login</button>
-        </div>
-    </div>
-    
+    <div id="app"></div>
+    <script src="main.js"></script>
 </body>
-    <style>
-        h1{
-            color: red;   
-        }
 
-        *{
-            font-family: 'Poppins', sans-serif;
-        }
-    </style>
 </html>
